--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
     image: blogs-webapi:latest
     container_name: blogs-webapi
     ports:
-      - "8080:8080"
+      - "8083:8083"
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
-      - ASPNETCORE_URLS=http://+:8080
+      - ASPNETCORE_URLS=http://+:8083
       - ConnectionStrings__Default=Server=mysql;Port=3306;Database=blogsdb;User=root;Password=Zlj@123;SslMode=Preferred;
       - Redis__Host=redis
       - Redis__Port=6379
@@ -40,6 +40,7 @@ services:
   redis:
     image: redis:7-alpine
     container_name: blogs-redis
+    command: ["redis-server", "--bind", "0.0.0.0"]
     ports:
       - "6377:6379"
     volumes:
@@ -54,4 +55,4 @@ volumes:
 
 networks:
   app-network:
-    driver: bridge
+    external: true  
