--- a/5_WebApi/Blogs.WebApi/appsettings.json
+++ b/5_WebApi/Blogs.WebApi/appsettings.json
@@ -20,8 +20,8 @@
   //},
   //容器配置-访问容器名称而不是IP地址,端口号连接其内部端口
   "ConnectionStrings": {
-    "MySqlConnectionWrite": "server=blogs-mysql;port=3306;database=blogs_single_application;uid=root;pwd=Zlj@123;",
-    "MySqlConnectionRead": "server=blogs-mysql;port=3306;database=blogs_single_application;uid=root;pwd=Zlj@123;",
+    "MySqlConnectionWrite": "server=blogs-mysql;port=3306;database=blogsdb;uid=root;pwd=Zlj@123;",
+    "MySqlConnectionRead": "server=blogs-mysql;port=3306;database=blogsdb;uid=root;pwd=Zlj@123;",
     "RedisConnection": "blogs-redis:6379"
   },
   "Logging": {
