--- a/5_WebApi/Blogs.WebApi/appsettings.json
+++ b/5_WebApi/Blogs.WebApi/appsettings.json
@@ -13,17 +13,17 @@
     "TokenExpires": 120, //访问令牌过期时间：120分钟
     "RefreshTokenExpires": 4320 //刷新令牌过期时间：3天
   },
-  //"ConnectionStrings": {
-  //  "MySqlConnectionWrite": "server=localhost;port=3306;database=blogs_single_application;uid=root;pwd=Zlj@123;",
-  //  "MySqlConnectionRead": "server=localhost;port=3306;database=blogs_single_application;uid=root;pwd=Zlj@123;",
-  //  "RedisConnection": "localhost:6379"
-  //},
-  //容器配置-访问容器名称而不是IP地址,端口号连接其内部端口
   "ConnectionStrings": {
-    "MySqlConnectionWrite": "server=blogs-mysql;port=3306;database=blogsdb;uid=root;pwd=Zlj@123;",
-    "MySqlConnectionRead": "server=blogs-mysql;port=3306;database=blogsdb;uid=root;pwd=Zlj@123;",
-    "RedisConnection": "blogs-redis:6379"
+    "MySqlConnectionWrite": "server=localhost;port=3306;database=blogs_single_application;uid=root;pwd=Zlj@123;",
+    "MySqlConnectionRead": "server=localhost;port=3306;database=blogs_single_application;uid=root;pwd=Zlj@123;",
+    "RedisConnection": "localhost:6379"
   },
+  //容器配置-访问容器名称而不是IP地址,端口号连接其内部端口
+  //"ConnectionStrings": {
+  //  "MySqlConnectionWrite": "server=blogs-mysql;port=3306;database=blogsdb;uid=root;pwd=Zlj@123;",
+  //  "MySqlConnectionRead": "server=blogs-mysql;port=3306;database=blogsdb;uid=root;pwd=Zlj@123;",
+  //  "RedisConnection": "blogs-redis:6379"
+  //},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
