修复前端打包

--- a/5_WebApi/Blogs.WebApi/Blogs.WebApi.csproj
+++ b/5_WebApi/Blogs.WebApi/Blogs.WebApi.csproj
@@ -36,6 +36,9 @@
   </ItemGroup>
     
   <ItemGroup>
+    <Content Update="appsettings.Docker.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -45,6 +48,9 @@
     
   <ItemGroup>
     <None Update="encryption-certificate.pfx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Properties\launchSettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
