--- a/6_WebSite/Blogs.Admin/Dockerfile
+++ b/6_WebSite/Blogs.Admin/Dockerfile
@@ -1,23 +1,49 @@
-# 构建阶段
+# Stage 1: Install dependencies
+FROM node:18-alpine AS dependencies
+WORKDIR /app
+
+# Copy package files
+COPY package.json package-lock.json ./
+
+# Install ALL dependencies (including devDependencies needed for build)
+RUN npm ci
+
+# Stage 2: Build application
 FROM node:18-alpine AS builder
 WORKDIR /app
-COPY package*.json ./
-RUN npm ci --silent    #安装依赖包
-COPY . .
-RUN npm run build        # 生成 dist 目录
 
-# 运行阶段
-FROM nginx:alpine
-# 动态生成 nginx 配置（支持 SPA）
-RUN echo "server {\n\
-    listen 80;\n\
-    location / {\n\
-        root /usr/share/nginx/html;\n\
-        index index.html;\n\
-        try_files \$uri \$uri/ /index.html;\n\
-    }\n\
-}" > /etc/nginx/conf.d/default.conf
-# 注意：这里复制的是 dist，不是 build！
+# Copy dependencies from previous stage
+COPY --from=dependencies /app/node_modules ./node_modules
+
+# Copy configuration files first
+COPY package.json package-lock.json ./
+COPY tsconfig.json tsconfig.app.json tsconfig.node.json ./
+COPY vite.config.ts vitest.config.ts ./
+COPY .env.development .env.production ./
+COPY index.html ./
+
+# Copy source code
+COPY src ./src
+COPY public ./public
+
+# Build the application
+RUN npm run build
+
+# Stage 3: Production image with Nginx
+FROM nginx:alpine AS production
+
+# Copy built files from builder stage
 COPY --from=builder /app/dist /usr/share/nginx/html
+
+# Copy nginx configuration (optional - uncomment if you have custom config)
+# COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Expose port 80
 EXPOSE 80
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD wget --quiet --tries=1 --spider http://localhost/ || exit 1
+
+# Start nginx
 CMD ["nginx", "-g", "daemon off;"]
