--- a/6_WebSite/Blogs.WebSite/package.json
+++ b/6_WebSite/Blogs.WebSite/package.json
@@ -30,5 +30,6 @@
     "globals": "^16.4.0",
     "sass": "^1.93.2",
     "vite": "^7.1.7"
-  }
+  },
+  "packageManager": "yarn@4.1.1+sha512.ec40d0639bb307441b945d9467139cbb88d14394baac760b52eca038b330d16542d66fef61574271534ace5a200518dabf3b53a85f1f9e4bfa37141b538a9590"
 }
