--- a/6_WebSite/Blogs.WebSite/Dockerfile
+++ b/6_WebSite/Blogs.WebSite/Dockerfile
@@ -1,15 +1,35 @@
+# 构建阶段
+FROM node:20-bookworm-slim AS builder
+
+WORKDIR /app
+
+# 复制包文件并安装依赖（包含开发依赖）
+COPY package*.json ./
+RUN npm ci
+
+# 复制源代码并构建
+COPY . .
+RUN npm run build
+
 # 运行阶段
 FROM nginx:alpine
-# 动态生成 nginx 配置（支持 SPA）
-RUN echo "server {\n\
-    listen 80;\n\
-    location / {\n\
-        root /usr/share/nginx/html;\n\
-        index index.html;\n\
-        try_files \$uri \$uri/ /index.html;\n\
-    }\n\
-}" > /etc/nginx/conf.d/default.conf
-# 注意：这里复制的是 dist，不是 build！
+
+# 创建nginx配置目录（确保目录存在）
+RUN mkdir -p /etc/nginx/conf.d
+
+# 正确写入nginx配置
+RUN echo "server {" > /etc/nginx/conf.d/default.conf && \
+    echo "    listen 80;" >> /etc/nginx/conf.d/default.conf && \
+    echo "    server_name localhost;" >> /etc/nginx/conf.d/default.conf && \
+    echo "    location / {" >> /etc/nginx/conf.d/default.conf && \
+    echo "        root /usr/share/nginx/html;" >> /etc/nginx/conf.d/default.conf && \
+    echo "        index index.html index.htm;" >> /etc/nginx/conf.d/default.conf && \
+    echo "        try_files \$uri \$uri/ /index.html;" >> /etc/nginx/conf.d/default.conf && \
+    echo "    }" >> /etc/nginx/conf.d/default.conf && \
+    echo "}" >> /etc/nginx/conf.d/default.conf
+
+# 复制构建产物
 COPY --from=builder /app/dist /usr/share/nginx/html
+
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
