--- a/6_WebSite/Blogs.Admin/.env.production
+++ b/6_WebSite/Blogs.Admin/.env.production
@@ -1,4 +1,4 @@
 # 生产环境配置
 VITE_APP_TITLE=博客管理后台
-VITE_API_BASE_URL=https://api.yourdomain.com
+VITE_API_BASE_URL=http://tears.icu:8083
 VITE_APP_ENV=production
