--- a/6_WebSite/Blogs.WebSite/.env.production
+++ b/6_WebSite/Blogs.WebSite/.env.production
@@ -1,2 +1,2 @@
 # Production Environment Variables
-VITE_API_BASE_URL=http://tears.icu:8083/api/app
+VITE_API_BASE_URL=http://zhenglijun.com:8083/api/app
