更新跨域配置

--- a/5_WebApi/Blogs.WebApi/appsettings.Production.json
+++ b/5_WebApi/Blogs.WebApi/appsettings.Production.json
@@ -32,7 +32,7 @@
       "TimestampFormat": "yyyy-MM-dd HH:mm:ss "
     }
   },
-  "CorsConfig": "http://zhenglijun.com:8085;http://zhenglijun.com:8086;",
+  "CorsConfig": "https://blog.zhenglijun.com;http://blog.zhenglijun.com;https://app.zhenglijun.com;http://app.zhenglijun.com;",
   "FileStoreConfig": {
     "StoreServerUrl": "http://zhenglijun.com:8083",
     "MaxFileSize": 104857600,
