--- a/1_Shared/Blogs.Common/Blogs.Common.csproj
+++ b/1_Shared/Blogs.Common/Blogs.Common.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
+    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.4" />
     <PackageReference Include="SqlSugarCore" Version="5.1.4.200" />
   </ItemGroup>
 
