--- a/5_WebApi/Blogs.WebApi/appsettings.Docker.json
+++ b/5_WebApi/Blogs.WebApi/appsettings.Docker.json
@@ -34,7 +34,7 @@
   },
   "CorsConfig": "http://zhenglijun.com:8083;http://zhenglijun.com:8084;http://zhenglijun.com:8085;http://zhenglijun.com:8086;",
   "FileStoreConfig": {
-    "StoreServerUrl": "http://zhenglijun.com:8083",
+    "StoreServerUrl": "https://blog.zhenglijun.com",
     "MaxFileSize": 104857600,
     "LargeFileThreshold": 52428800,
     "MaxConcurrentUploads": 5,
