更新图片上传

--- a/5_WebApi/Blogs.WebApi/appsettings.Development.json
+++ b/5_WebApi/Blogs.WebApi/appsettings.Development.json
@@ -29,7 +29,8 @@
   },
   "CorsConfig": "https://localhost:7208;http://localhost:3000;http://localhost:5173",
   "FileStoreConfig": {
-    "StoreServerUrl": "http://localhost:5234",
+    "StoreServerUrl": "http://localhost:5234/Uploads",
+    "FileSavePath": "D:\\Workspace/DotNet/ZLJ.BlogSingleApplication/master/5_WebApi/Blogs.WebApi/Uploads",
     "MaxFileSize": 104857600,
     "LargeFileThreshold": 52428800,
     "MaxConcurrentUploads": 5,
