--- a/5_WebApi/Blogs.WebApi/Blogs.WebApi.csproj
+++ b/5_WebApi/Blogs.WebApi/Blogs.WebApi.csproj
@@ -11,6 +11,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\**" />
+    <Content Remove="Views\**" />
+    <EmbeddedResource Remove="Views\**" />
+    <None Remove="Views\**" />
+  </ItemGroup>
+
+  <ItemGroup>
    
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Scrutor.AspNetCore" Version="3.3.0" />
@@ -22,7 +29,7 @@
   
 
   <ItemGroup>
-    <Folder Include="Views\" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
