--- a/5_WebApi/Blogs.WebApi/appsettings.Docker.json
+++ b/5_WebApi/Blogs.WebApi/appsettings.Docker.json
@@ -35,7 +35,7 @@
   "CorsConfig": "http://zhenglijun.com:8083;http://zhenglijun.com:8084;http://zhenglijun.com:8085;http://zhenglijun.com:8086;",
   "FileStoreConfig": {
     "StoreServerUrl": "https://blog.zhenglijun.com/Uploads",
-    "FileSavePath": "/opt/docker/data/blog_webapi/Uploads",
+    "FileSavePath": "/app/Uploads",
     "MaxFileSize": 104857600,
     "LargeFileThreshold": 52428800,
     "MaxConcurrentUploads": 5,
