--- a/5_WebApi/Blogs.WebApi/appsettings.Production.json
+++ b/5_WebApi/Blogs.WebApi/appsettings.Production.json
@@ -34,7 +34,8 @@
   },
   "CorsConfig": "https://blog.zhenglijun.com;http://blog.zhenglijun.com;https://app.zhenglijun.com;http://app.zhenglijun.com;https://admin.zhenglijun.com;http://admin.zhenglijun.com;",
   "FileStoreConfig": {
-    "StoreServerUrl": "https://blog.zhenglijun.com",
+    "StoreServerUrl": "https://blog.zhenglijun.com/Uploads",
+    "FileSavePath": "/app/Uploads",
     "MaxFileSize": 104857600,
     "LargeFileThreshold": 52428800,
     "MaxConcurrentUploads": 5,
