--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - redis
     restart: unless-stopped
     volumes:
-      - /opt/docker/data/blog_webapi/Uploads:/app/Uploads
+      - /opt/docker/data/blog_webapi/Uploads:/app/Uploads:ro
     networks:
       - app-network
 
