--- a/5_WebApi/Blogs.WebApi/Properties/launchSettings.json
+++ b/5_WebApi/Blogs.WebApi/Properties/launchSettings.json
@@ -13,9 +13,9 @@
     "https": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launc    hUrl": "swagger",
+      "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Docker"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7235;http://localhost:5234"
