--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,8 +93,8 @@ services:
       - app-network
 
 volumes:
-  mysql-data
-  redis-data
+  mysql-data: 
+  redis-data: 
 
 networks:
   app-network:
