--- a/6_WebSite/Blogs.WebSite/.env.development
+++ b/6_WebSite/Blogs.WebSite/.env.development
@@ -1,5 +1,5 @@
 # Development Environment Variables
 # VITE_API_BASE_URL=https://localhost:7235/api/app
-# VITE_API_BASE_URL=http://localhost:5234/api/app
-VITE_API_BASE_URL=https://api.zhenglijun.com/api/app
+VITE_API_BASE_URL=http://localhost:5234/api/app
+# VITE_API_BASE_URL=https://api.zhenglijun.com/api/app
 
