--- a/6_WebSite/Blogs.WebSite/.env.production
+++ b/6_WebSite/Blogs.WebSite/.env.production
@@ -1,2 +1,2 @@
 # Production Environment Variables
-VITE_API_BASE_URL=https://api.zhenglijun.com/
+VITE_API_BASE_URL=https://api.zhenglijun.com/api/app
