--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,7 +73,12 @@ services:
     restart: unless-stopped
     networks:
       - app-network
-
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "--password=Zlj@123"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 30s
   redis:
     image: redis:7-alpine
     container_name: blogs-redis
