--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - Redis__Host=redis
       - Redis__Port=6379
       - Redis__InstanceName=blogs_cache
-      - Redis__Password=
+      - Redis__Password=Zlj@123
     depends_on:
       mysql:
         condition: service_healthy
