--- a/5_WebApi/Blogs.WebApi/appsettings.Docker.json
+++ b/5_WebApi/Blogs.WebApi/appsettings.Docker.json
@@ -16,7 +16,7 @@
   "ConnectionStrings": {
     "MySqlConnectionWrite": "server=blogs-mysql;port=3306;database=blogsdb;uid=root;pwd=Zlj@123;",
     "MySqlConnectionRead": "server=blogs-mysql;port=3306;database=blogsdb;uid=root;pwd=Zlj@123;",
-    "RedisConnection": "blogs-redis:6379"
+    "RedisConnection": "blogs-redis:6379,password=Zlj@123"
   },
   "Logging": {
     "LogLevel": {
