--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,11 +111,11 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ../nginx/conf.d:/etc/nginx/conf.d:ro
-      - ../certs:/etc/nginx/certs:ro
-      - ../nginx/html:/usr/share/nginx/html:ro
-      - ../nginx/logs:/var/log/nginx
-      - ./5_WebApi/Uploads:/opt/docker/data/blog_webapi/Uploads:ro
+      - /var/lib/jenkins/workspace/nginx/conf.d:/etc/nginx/conf.d:ro
+      - /var/lib/jenkins/workspace/certs:/etc/nginx/certs:ro
+      - /var/lib/jenkins/workspace/nginx/html:/usr/share/nginx/html:ro
+      - /var/lib/jenkins/workspace/nginx/logs:/var/log/nginx
+      - /var/lib/jenkins/workspace/BlogsWebProject/5_WebApi/Uploads:/opt/docker/data/blog_webapi/Uploads:ro
     depends_on:
       - blogs-admin
       - blogs-website
