--- a/5_WebApi/Blogs.WebApi/appsettings.Production.json
+++ b/5_WebApi/Blogs.WebApi/appsettings.Production.json
@@ -32,7 +32,7 @@
       "TimestampFormat": "yyyy-MM-dd HH:mm:ss "
     }
   },
-  "CorsConfig": "https://blog.zhenglijun.com;http://blog.zhenglijun.com;https://app.zhenglijun.com;http://app.zhenglijun.com;https://admin.zhenglijun.com;http://admin.zhenglijun.com;",
+  "CorsConfig": "https://blog.zhenglijun.com;https://app.zhenglijun.com;https://admin.zhenglijun.com;https://api.zhenglijun.com;",
   "FileStoreConfig": {
     "StoreServerUrl": "https://blog.zhenglijun.com/Uploads",
     "FileSavePath": "/app/Uploads",
@@ -43,3 +43,4 @@
   },
   "AllowedHosts": "*"
 }
+http://admin.zhenglijun.com;
