--- a/5_WebApi/Blogs.WebApi/appsettings.Docker.json
+++ b/5_WebApi/Blogs.WebApi/appsettings.Docker.json
@@ -32,14 +32,15 @@
       "TimestampFormat": "yyyy-MM-dd HH:mm:ss "
     }
   },
-  "CorsConfig": "https://blog.zhenglijun.com;http://blog.zhenglijun.com;https://app.zhenglijun.com;http://app.zhenglijun.com;https://admin.zhenglijun.com;http://admin.zhenglijun.com;",
+  "CorsConfig": "https://blog.zhenglijun.com;https://app.zhenglijun.com;https://admin.zhenglijun.com;https://api.zhenglijun.com;",
   "FileStoreConfig": {
-    "StoreServerUrl": "https://blog.zhenglijun.com/Uploads",
-    "FileSavePath": "/app/Uploads",
-    "MaxFileSize": 104857600,
-    "LargeFileThreshold": 52428800,
-    "MaxConcurrentUploads": 5,
-    "AllowedFileExtensions": [ ".jpg", ".jpeg", ".png", ".gif", ".pdf", ".doc", ".docx", ".txt", ".zip" ]
-  },
-  "AllowedHosts": "*"
-}
+    "FileStoreConfig": {
+      "StoreServerUrl": "https://blog.zhenglijun.com/Uploads",
+      "FileSavePath": "/app/Uploads",
+      "MaxFileSize": 104857600,
+      "LargeFileThreshold": 52428800,
+      "MaxConcurrentUploads": 5,
+      "AllowedFileExtensions": [ ".jpg", ".jpeg", ".png", ".gif", ".pdf", ".doc", ".docx", ".txt", ".zip" ]
+    },
+    "AllowedHosts": "*"
+  }
