--- a/5_WebApi/Blogs.WebApi/appsettings.Production.json
+++ b/5_WebApi/Blogs.WebApi/appsettings.Production.json
@@ -32,7 +32,7 @@
       "TimestampFormat": "yyyy-MM-dd HH:mm:ss "
     }
   },
-  "CorsConfig": "https://blog.zhenglijun.com;https://app.zhenglijun.com;https://admin.zhenglijun.com;https://api.zhenglijun.com;",
+  "CorsConfig": "https://blog.zhenglijun.com;https://app.zhenglijun.com;https://admin.zhenglijun.com;https://api.zhenglijun.com;https://zhenglijun.com",
   "FileStoreConfig": {
     "StoreServerUrl": "https://blog.zhenglijun.com/Uploads",
     "FileSavePath": "/app/Uploads",
@@ -42,5 +42,4 @@
     "AllowedFileExtensions": [ ".jpg", ".jpeg", ".png", ".gif", ".pdf", ".doc", ".docx", ".txt", ".zip" ]
   },
   "AllowedHosts": "*"
-}
-http://admin.zhenglijun.com;
+} 
