--- a/5_WebApi/Blogs.WebApi/appsettings.Production.json
+++ b/5_WebApi/Blogs.WebApi/appsettings.Production.json
@@ -34,7 +34,7 @@
   },
   "CorsConfig": "https://blog.zhenglijun.com;https://app.zhenglijun.com;https://admin.zhenglijun.com;https://api.zhenglijun.com;https://zhenglijun.com",
   "FileStoreConfig": {
-    "StoreServerUrl": "https://blog.zhenglijun.com/Uploads",
+    "StoreServerUrl": "https://api.zhenglijun.com",
     "FileSavePath": "/app/Uploads",
     "MaxFileSize": 104857600,
     "LargeFileThreshold": 52428800,
