--- a/5_WebApi/Blogs.WebApi/appsettings.Docker.json
+++ b/5_WebApi/Blogs.WebApi/appsettings.Docker.json
@@ -35,7 +35,7 @@
   "CorsConfig": "https://blog.zhenglijun.com;https://app.zhenglijun.com;https://admin.zhenglijun.com;https://api.zhenglijun.com;",
   "FileStoreConfig": {
     "FileStoreConfig": {
-      "StoreServerUrl": "https://api.zhenglijun.com",
+      "StoreServerUrl": "https://api.zhenglijun.com/Uploads",
       "FileSavePath": "/app/Uploads",
       "MaxFileSize": 104857600,
       "LargeFileThreshold": 52428800,
