--- a/5_WebApi/Blogs.WebApi/appsettings.Docker.json
+++ b/5_WebApi/Blogs.WebApi/appsettings.Docker.json
@@ -21,7 +21,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "OpenIddict": "Warning"
     }
   },
   "Console": {
