--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
         condition: service_started
     restart: unless-stopped
     volumes:
-      - ./5_WebApi/wwwroot/Uploads:/app/wwwroot/Uploads
+      - /opt/docker/data/blog_webapi/Uploads: /app/wwwroot/Uploads
     networks:
       - app-network
     healthcheck:
