--- a/5_WebApi/Blogs.WebApi/appsettings.Docker.json
+++ b/5_WebApi/Blogs.WebApi/appsettings.Docker.json
@@ -21,7 +21,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning", 
+      "Microsoft.AspNetCore": "Warning",
       "OpenIddict": "Warning"
     }
   },
@@ -33,7 +33,7 @@
       "TimestampFormat": "yyyy-MM-dd HH:mm:ss "
     }
   },
-  "CorsConfig": "https://blog.zhenglijun.com;https://app.zhenglijun.com;https://admin.zhenglijun.com;https://api.zhenglijun.com;",
+  "CorsConfig": "https://admin.zhenglijun.com;https://blog.zhenglijun.com;https://app.zhenglijun.com;https://api.zhenglijun.com;https://zhenglijun.com",
   "FileStoreConfig": {
     "FileStoreConfig": {
       "StoreServerUrl": "https://api.zhenglijun.com/Uploads",
