--- a/6_WebSite/Blogs.Admin/.env.production
+++ b/6_WebSite/Blogs.Admin/.env.production
@@ -1,4 +1,4 @@
 # 生产环境配置
 VITE_APP_TITLE=博客管理后台
-VITE_API_BASE_URL=https://zhenglijun.com/
+VITE_API_BASE_URL=https://zhenglijun.com/api/admin
 VITE_APP_ENV=production
