--- a/5_WebApi/Blogs.WebApi/appsettings.Production.json
+++ b/5_WebApi/Blogs.WebApi/appsettings.Production.json
@@ -20,7 +20,7 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information", 
+      "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
       "OpenIddict": "Warning"
     }
@@ -33,7 +33,7 @@
       "TimestampFormat": "yyyy-MM-dd HH:mm:ss "
     }
   },
-  "CorsConfig": "https://blog.zhenglijun.com;https://app.zhenglijun.com;https://admin.zhenglijun.com;https://api.zhenglijun.com;https://zhenglijun.com",
+  "CorsConfig": "https://admin.zhenglijun.com;https://blog.zhenglijun.com;https://app.zhenglijun.com;https://api.zhenglijun.com;https://zhenglijun.com",
   "FileStoreConfig": {
     "StoreServerUrl": "https://api.zhenglijun.com/Uploads",
     "FileSavePath": "/app/Uploads",
