--- a/6_WebSite/Blogs.Admin/.env.development
+++ b/6_WebSite/Blogs.Admin/.env.development
@@ -1,4 +1,4 @@
 # 开发环境配置
 VITE_APP_TITLE=博客管理后台
-VITE_API_BASE_URL=http://localhost:5234/
+VITE_API_BASE_URL=http://localhost:5234/api/admin
 VITE_APP_ENV=development
